# maya-otio

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: CORE_VERSION_MAP.cpp.4C2AD16E7697D602.idx  ImathBox.h.5E3F1E9711787A52.idx  ImathColor.h.3CC2A9EB77FF7B38.idx  ImathColorAlgo.cpp.F658AC1BAD6557A5.idx  ImathColorAlgo.h.F3196800940C83E7.idx  ImathConfig.h.5C57CFD2461D9090.idx  ImathEuler.h.5E190AD14F79AB92.idx  ImathExport.h.F07D11F4454E4620.idx  ImathFun.cpp.875006ECDED278D5.idx  ImathFun.h.37FD5B542FEE357F.idx  ImathMath.h.AF1872DF823B0AA3.idx  ImathMatrix.h.B7634B198435A01D.idx  ImathMatrixAlgo.cpp.A3266AA9EF19DADA.idx  ImathMatrixAlgo.h.2F6328149553CBCF.idx  ImathNamespace.h.94433264D7645BCB.idx  ImathPlatform.h.6DE80EC515622730.idx  ImathQuat.h.DA0CC744D17A0ADF.idx  ImathRandom.cpp.32AB3313F34B40E4.idx  ImathRandom.h.0CB245CC41358375.idx  ImathShear.h.6CA54DF92C9B0415.idx  ImathTypeTraits.h.24BF22E55DFE6A05.idx  ImathVec.h.1ECC9CBA2DC61A41.idx  allocators.h.7C8959F7A25105D0.idx  any.h.A2BDCA9643845E1C.idx  any.hpp.786D8D27EFF9FCFB.idx  anyDictionary.h.7AD57C82884D4315.idx  anyVector.h.5AF4BB71E8981818.idx  biginteger.h.5DCB00B2222C39B3.idx  clip.cpp.9CB47EB09EB6D58A.idx  clip.h.56E2DD8F56ABB55D.idx  clzll.h.37D4A2D5CC1051CA.idx  composable.cpp.E7108684C3604D9D.idx  composable.h.9FC2EB83E8444CAE.idx  composition.cpp.9DC126E64825467C.idx  composition.h.FF9E595207D6B312.idx  cursorstreamwrapper.h.E6F5A0125FB26961.idx  deserialization.cpp.7B954009B2068527.idx  deserialization.h.2F2061024A315FA2.idx  diyfp.h.6EBEC2A149E318F1.idx  dtoa.h.22CE8F222A2D821C.idx  (+101 more)
include/: otioTranslator.h  utils.h
libs/OpenTimelineIO/: CTestTestfile.cmake  DartConfiguration.tcl  cmake_install.cmake
libs/OpenTimelineIO/src/opentime/: CTestTestfile.cmake  cmake_install.cmake
libs/OpenTimelineIO/src/opentimelineio/: CTestTestfile.cmake  cmake_install.cmake
libs/OpenTimelineIO/tests/: CTestTestfile.cmake  cmake_install.cmake
src/: main.cpp  otioTranslator.cpp
tests/sampleData/: image_sequence_example.otio  screening_example.ma  screening_example.otio
